--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,10 @@
             "email": "jpswade@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "Deaduseful\\Opensrs\\": "src"
+        }
+    }
 }
