fix: add sockets requirement

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-      "ext-simplexml": "*"
+      "ext-simplexml": "*",
+        "ext-sockets": "*"
     },
     "autoload": {
         "psr-4": {
