--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
         "psr-4": {
             "Deaduseful\\Opensrs\\": "src"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.1"
     }
 }
