--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8.1"
+    },
+    "config": {
+        "platform": {
+            "php": "7.1"
+        }
     }
 }
