--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "ext-simplexml": "*",
         "ext-sockets": "*",
-        "ext-libxml": "*"
+        "ext-libxml": "*",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
