--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "php": ">=7.4",
         "ext-simplexml": "*",
         "ext-sockets": "*",
         "ext-libxml": "*",
